--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -2,21 +2,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="center_horizontal"
     android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".LoginActivity"
-    android:gravity="center_horizontal">
+    tools:context=".LoginActivity">
 
     <EditText
         android:id="@+id/username_et"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="120dp"
-        android:hint="@string/username_et"
-        android:text="carlton"/>
+        android:hint="@string/username_et" />
 
     <EditText
         android:id="@+id/password_et"
@@ -24,8 +23,7 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:hint="@string/password_et"
-        android:inputType="textPassword"
-        android:text="1234"/>
+        android:inputType="textPassword" />
 
     <Button
         android:id="@+id/login_btn"
